--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png" />
   </head>
 
-  <body onload="initGame(gBoard)">
+  <body onload="initGame()">
     <div class="container">
       <div class="status-bar">
         <div>Live: 3</div>
