--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
         <button title="Hint" type="button" onclick="setHint(this)" class="hint-btn"><img src="assets/images/buttons/hint.png" /><span>3</span></button>
         <button title="Safe-Click" type="button" onclick="safeClick(this)" class="safe-btn"><img src="assets/images/buttons/safe.png" /><span>3</span></button>
         <button title="Mega-Hint" type="button" onclick="setMegaHintMode(this)" class="mega-hint"><img src="assets/images/buttons/grid.png" /></button>
-        <label  title="Manual Mode" class="switch">
+        <label title="Manual Mode" class="switch">
           <input class="manual-btn" type="checkbox" onchange="onManualModeChange(this)">
           <span class="slider round"></span>
         </label>
+        <button title="7-Boom" type="button" onclick="boom7()" class="boom7-btn">7-Boom!</button>
       </div>
 
       <table>
