--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <span class="slider round"></span>
         </label>
         <button title="7-Boom" type="button" onclick="boom7()" class="boom7-btn">7-Boom!</button>
+        <button title="Exterminator" type="button" onclick="exterminator()" class="exterminator-btn">Exterminator</button>
       </div>
 
       <table>
